--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -325,6 +325,9 @@ DESC_ANI_242;I, [From.GetTitledName], officialy declare you independent!;Moi, [F
 OPT_ANI_242;It couldn't be better!;ça ne pourrait pas être mieux;;;;;;;;;;;;x
 DESC_ANI_243;We will choose our true [From.primary_title.GetTier] through the opinion of my others vassals;Nous allons choisir notre [From.primary_title.GetTier] grâce à l'opinion de tes co-vassaux.;;;;;;;;;;;;x
 OPT_ANI_243;[From.GetSheHeCap] use the democracy when [From.GetSheHe] like it;[From.GetSheHeCap] veut utiliser la démocratie quand ça l'arrange;;;;;;;;;;;;x 
+DESC_ANI_244;The last vote arrived. We will soon know who will be a [primary_title.GetTier];Le dernier vote vient d'arriver, nous allons maintenant savoir qui mérite d'être [primary_title.GetTier].;;;;;;;;;;;;x
+OPTA_ANI_244;Of course, it is me!;Bien sûre que c'est moi!;;;;;;;;;;;;x
+OPTB_ANI_244;Why did I not was chosen?!;Pourquoi n'ai-je pas été choisi?;;;;;;;;;;;;x
 
 TT_dragon_loose_province_fort;loose control over §Y[This.GetName]§!;perd le controle de §Y[This.GetName]§!;;;;;;;;;;;;x
 TT_dragon_duel_in_7_days;The death duel will start in a week;Le duel à mort démarera dans une semaine;;;;;;;;;;;;x
@@ -332,3 +335,5 @@ TT_dragon_became_indep;[dragon_vassal_unsatisfied.GetTitledFirstName] became ind
 TT_dragon_looses_death_duel;loose duel and die;perd le duel et meurt;;;;;;;;;;;;x
 TT_dragon_wins_death_duel;loose the duel;perd le duel;;;;;;;;;;;;x
 TT_dragon_vote_soon;the vote start;les votes commencent;;;;;;;;;;;;x
+TT_dragon_imprisoned;is imprisoned;est emprisonné;;;;;;;;;;;;x
+TT_dragon_won_contest;became the new [Root.primary_title.GetTier];devient [dragon_vassal_unsatisfied.GetLeLa] nouv[dragon_vassal_unsatisfied.GetEauElle] [Root.primary_title.GetTier];;;;;;;;;;;;x
