--- a/animals_update/localisation/other_event.csv
+++ b/animals_update/localisation/other_event.csv
@@ -328,6 +328,9 @@ OPT_ANI_243;[From.GetSheHeCap] use the democracy when [From.GetSheHe] like it;[F
 DESC_ANI_244;The last vote arrived. We will soon know who will be a [primary_title.GetTier];Le dernier vote vient d'arriver, nous allons maintenant savoir qui mérite d'être [primary_title.GetTier].;;;;;;;;;;;;x
 OPTA_ANI_244;Of course, it is me!;Bien sûre que c'est moi!;;;;;;;;;;;;x
 OPTB_ANI_244;Why did I not was chosen?!;Pourquoi n'ai-je pas été choisi?;;;;;;;;;;;;x
+DESC_ANI_245;The vote started by [From.GetTitledFirstName] are finished. The result are now out;Les votes qui ont été lancé à ma demande ont été cloturé. [From.GetTitledFirstName] vient d'annoncé le futur [From.primary_title.GetTier].;;;;;;;;;;;;x
+OPTA_ANI_245;Why does no one recognize my talents?!;Pourquoi n'ai-je pas été choisi?!;;;;;;;;;;;;x
+OPTB_ANI_245;I am finally at my rightful place!;Ils ont enfin reconnu ma véritable place;;;;;;;;;;;;x
 
 TT_dragon_loose_province_fort;loose control over §Y[This.GetName]§!;perd le controle de §Y[This.GetName]§!;;;;;;;;;;;;x
 TT_dragon_duel_in_7_days;The death duel will start in a week;Le duel à mort démarera dans une semaine;;;;;;;;;;;;x
