--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -463,16 +463,16 @@ fo_drg_guardian_07;draconic influence VII;influence draconique VII;;;;;;;;;;;;x
 fo_drg_guardian_08;draconic influence VIII;influence draconique VIII;;;;;;;;;;;;x
 fo_drg_guardian_09;draconic influence IX;influence draconique IX;;;;;;;;;;;;x
 fo_drg_guardian_10;draconic influence X;influence draconique X;;;;;;;;;;;;x
-fo_drg_retinue_1;dragon guard;garde draconique;;;;;;;;;;;;x
-fo_drg_retinue_2;dragon guard;garde draconique;;;;;;;;;;;;x
-fo_drg_retinue_3;dragon guard;garde draconique;;;;;;;;;;;;x
-fo_drg_heart_1;dragon throne;trone du dragon;;;;;;;;;;;;x
-fo_drg_heart_2;dragon throne;trone du dragon;;;;;;;;;;;;x
-fo_drg_heart_3;dragon throne;trone du dragon;;;;;;;;;;;;x
+fo_drg_retinue_1;dragon guard I;garde draconique I;;;;;;;;;;;;x
+fo_drg_retinue_2;dragon guard II;garde draconique II;;;;;;;;;;;;x
+fo_drg_retinue_3;dragon guard III;garde draconique III;;;;;;;;;;;;x
+fo_drg_heart_1;dragon throne I;trone du dragon I;;;;;;;;;;;;x
+fo_drg_heart_2;dragon throne II;trone du dragon II;;;;;;;;;;;;x
+fo_drg_heart_3;dragon throne III;trone du dragon III;;;;;;;;;;;;x
 fo_drg_trainee;training field;terrains d'entrainement;;;;;;;;;;;;x
-fo_drg_academy_1;academy;académie;;;;;;;;;;;;x
-fo_drg_academy_2;academy;académie;;;;;;;;;;;;x
-fo_drg_academy_3;academy;académie;;;;;;;;;;;;x
-fo_drg_casus_belli_1;authority building;bâtiment de souveraineté;;;;;;;;;;;;x
-fo_drg_casus_belli_2;authority building;bâtiment de souveraineté;;;;;;;;;;;;x
-fo_drg_casus_belli_3;authority building;bâtiment de souveraineté;;;;;;;;;;;;x
+fo_drg_academy_1;academy I;académie I;;;;;;;;;;;;x
+fo_drg_academy_2;academy II;académie II;;;;;;;;;;;;x
+fo_drg_academy_3;academy III;académie III;;;;;;;;;;;;x
+fo_drg_casus_belli_1;authority building I;bâtiment de souveraineté I;;;;;;;;;;;;x
+fo_drg_casus_belli_2;authority building II;bâtiment de souveraineté II;;;;;;;;;;;;x
+fo_drg_casus_belli_3;authority building III;bâtiment de souveraineté III;;;;;;;;;;;;x
