--- a/animals_update/localisation/rel_gov_and_titles.csv
+++ b/animals_update/localisation/rel_gov_and_titles.csv
@@ -94,14 +94,16 @@ title_dog_eve_councillor;Intrigue advisor;Conseiller d'intrigue;;;;;;;;;;;;x
 title_dog_eve_councillor_desc;Advisor promoted to prevent interest change;Ce conseiller empêche le changement d'intérêt impromptu;;;;;;;;;;;;x
 title_dog_res_councillor;Learning advisor;Conseiller érudit;;;;;;;;;;;;x
 title_dog_res_councillor_desc;Advisor promoted to remove implication limitation;Ce conseiller retire une limitation d'implication;;;;;;;;;;;;x
+title_dragon_alternate_space_master;alternate space master;maître des espaces alternatifs;;;;;;;;;;;;x
+title_dragon_alternate_space_master_desc;The alternate space master is an important role. He can create the alternative space used for education or prisoner's judgment.;Le maître des espaces alternatif est un rôle très important au sein d'un gouvernement dragon. Il a pour rôle de créer les espaces alternatifs qui servent à l'éducation et au jugement des prisonier. Cependant, le mettre n'a pas le pouvoir d'influer sur le contenu de l'espace.;;;;;;;;;;;;x 
 
 ###holy order titles
 d_polar_fighter;The polar warriors;Les chevaliers de la banquise;;;;;;;;;;;;x
 d_polar_fighter_adj;animal;animale;;;;;;;;;;;;x
 d_spike_ball;The spiked balls;Les boules piquantes;;;;;;;;;;;;x
 d_spike_ball_adj;animal;animale;;;;;;;;;;;;x
-d_asian_fighter;The chineses fighters;Les combattants chinois;;;;;;;;;;;;x # no idea for the name, could be changed later
-d_asian_fighter_adj;animal;animale;;;;;;;;;;;;x                            # I still don't want to make direct references to "kung fu panda" movies
+d_asian_fighter;The chineses fighters;Les combattants chinois;;;;;;;;;;;;x
+d_asian_fighter_adj;animal;animale;;;;;;;;;;;;x
 d_sea_master;Sea master;Maître des mer;;;;;;;;;;;;x
 d_sea_master_adj;animal;animale;;;;;;;;;;;;x
 d_immortal_herd;Immortals herds;Hordes immortelles;;;;;;;;;;;;x
