balance - province culture change

--- a/animals_update/localisation/decisions.csv
+++ b/animals_update/localisation/decisions.csv
@@ -361,6 +361,8 @@ dragon_vassal_take_independence;take my independence;Prendre son indépendance;;;
 dragon_vassal_take_independence_desc;As I have nothing to do with a dragon, i can proclam my independence. Even the dragon will agreed, but at what price?;En n'ayant rien a voir avec les dragons, je peux prendre mon indépendance sans que cela pose de problème à quiquonque. Cependant, à quel prix ce sera?;;;;;;;;;;;;x
 dragon_vassal_unsatisfied;Affirm my unsatisfaction;Contester la gouvernance de [Root.GetTitledFirstName];;;;;;;;;;;;x
 dragon_vassal_unsatisfied_desc;As [Root.GetTitledFirstName] is a bad ruler, I can try to weaken it's administration. But that can come with a price;Avec l'administration médiocre de [Root.GetTitledFirstName], je peux tenter d'affaiblir son administration. Cependant, ce sera à mes risques et périls;;;;;;;;;;;;x
+dragon_convert_to_culture;Let [From.Culture.GetName] install here;Laisser les [From.Culture.GetName] s'installer;;;;;;;;;;;;x
+dragon_convert_to_culture_desc; ; ;;;;;;;;;;;;x
 
 TT_dragon_did_not_lay_egg_recently;Did not lay an egg recently;N'a pas pondu d'œuf récemment;;;;;;;;;;;;x
 TT_is_an_adult_dragon;Has finished its dragon education;A fini son éducation de dragon;;;;;;;;;;;;x
