gov_7.2 - decision and event fixes

--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -201,7 +201,7 @@ horse_warrior_malus_5;agitated paysants;paysants agités;;;;;;;;;;;;x
 horse_conversion_tyrany;tyranical ritual;rituel tyranique;;;;;;;;;;;;x
 
 ##### dragon update
-dragon_enslaved;slave;esclave;;;;;;;;;;;;x
+dragon_enslaved;Slave;Esclave;;;;;;;;;;;;x
 
 ## custom modifier
 dragon_academy_level;academy level;niveau de l'académie;;;;;;;;;;;;x
